# cplace-docs-chat

./: Dockerfile.backend  README.md  build-docker.sh  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
backend/: Dockerfile  chain.py  constants.py  ingest.py  main.py
frontend/: .env.example  Dockerfile  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  theme.ts
frontend/app/components/: AutoResizeTextarea.tsx  ChatMessageBubble.tsx  ChatWindow.tsx  EmptyState.tsx  InlineCitation.tsx  SourceBubble.tsx
ingest/: helper_html.py  ingest.py  parser.py
