[tool.poetry]
name = "cplace-docs-chat"
version = "0.1.1"
license = "MIT"
description = ""
authors = ["sewe <52649758+cf-sewe@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1"
langsmith = "^0.1"
langchain-community = ">=0.0.27,<0.1"
langchain-openai = "^0.1"
langserve = {extras = ["server"], version = "^0.1"}
fastapi = "^0.110"
pydantic = "^1.10"
uvicorn = "^0.29"
beautifulsoup4 = "^4.12"
lxml = "^5.2"
pillow = "^10.3"
tiktoken = "^0.6"
elasticsearch = "^8.14"
langchain-elasticsearch = "^0.1"
tenacity = "^8.4"

[tool.poetry.group.lint.dependencies]
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
