[tool.poetry]
name = "cplace-docs-chat"
version = "0.1.1"
license = "MIT"
description = ""
authors = ["sewe <52649758+cf-sewe@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2"
langsmith = "^0.1"
langchain-community = "^0.2"
langchain-openai = "^0.1"
langserve = {extras = ["server"], version = "^0.2"}
elasticsearch = "^8.15"
langchain-elasticsearch = "^0.2"
fastapi = "^0.112"
uvicorn = "^0.30"

[tool.poetry.group.lint.dependencies]
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
